update: 添加生成器、告警模块