@@ -283,10 +283,10 @@ public class ExcelDownHandler implements SheetWriteHandler {
                     continue;
                 }
                 // 取第一个
-                String str = data.getFirst();
+                String str = data.get(0);
                 rowData.add(str);
                 // 通过移除的方式避免重复
-                data.removeFirst();
+                data.remove(0);
                 // 设置可以继续
                 flag = true;
             }
